--- a/addons/sourcemod/translations/pt/weapons.phrases.txt
+++ b/addons/sourcemod/translations/pt/weapons.phrases.txt
@@ -40,6 +40,10 @@
 	{
 		"pt"	"Uso de nametags desativado de momento."
 	}
+	"DontSpamNameTag"
+	{
+		"pt"	"Aguarde um pouco mais antes de usar !nametag novamente."
+	}
 	"NameTagNeedsParams"
 	{
 		"pt"	"Uso: !nametag <nome>"
