--- a/addons/sourcemod/translations/ru/weapons.phrases.txt
+++ b/addons/sourcemod/translations/ru/weapons.phrases.txt
@@ -40,6 +40,10 @@
 	{
 		"ru"	"Использование именного ярлыка выключено в данный момент."
 	}
+	"DontSpamNameTag"
+	{
+		"ru"	"Подождите немного, прежде чем снова использовать !nametag"
+	}
 	"NameTagNeedsParams"
 	{
 		"ru"	"Используйте: !nametag <тег>"
