--- a/addons/sourcemod/translations/ru/weapons.phrases.txt
+++ b/addons/sourcemod/translations/ru/weapons.phrases.txt
@@ -284,6 +284,10 @@
 	{
 		"ru"	"Нож"
 	}
+	"weapon_knife_css"
+	{
+		"ru"	"Классический Нож"
+	}
 	"ChangeNameTag"
 	{
 		"ru"	"Установить именной ярлык"
