--- a/addons/sourcemod/translations/weapons.phrases.txt
+++ b/addons/sourcemod/translations/weapons.phrases.txt
@@ -336,13 +336,9 @@
 	{
 		"en"	"Name tag successfully applied"
 	}
-	"AllSkins"
+	"Seed"
 	{
-		"en"	"Skin From All"
-	}
-	"AllSkinsSub"
-	{
-		"en"	"Skins for: %s"
+		"en"	"Seed"
 	}
 	"SeedTitle"
 	{
@@ -354,7 +350,7 @@
 	}
 	"SeedRandom"
 	{
-		"en"	"Use Random Seed"
+		"en"	"Random Seed"
 	}
 	"SeedManual"
 	{
@@ -370,7 +366,7 @@
 	}
 	"SeedSuccess"
 	{
-		"en"	"Seed successfully applied"
+		"en"	"Seed successfully applied."
 	}
 	"SeedCancelled"
 	{
@@ -383,5 +379,21 @@
 	"SeedSaved"
 	{
 		"en"	"Seed saved."
+	}
+	"SeedDisabled"
+	{
+		"en"	"Seed menu is disabled at the moment."
+	}
+	"SeedExplanation"
+	{
+		"en"	"You should use !ws menu to set seed for skins."
+	}
+	"SeedReset"
+	{
+		"en"	"Seed reset."
+	}
+	"ResetSeed"
+	{
+		"en"	"Reset Seed"
 	}
 }
