update chinese translations
add seed menu & weapon_knife_css support

--- a/addons/sourcemod/translations/chi/weapons.phrases.txt
+++ b/addons/sourcemod/translations/chi/weapons.phrases.txt
@@ -296,6 +296,10 @@
 	{
 		"chi"	"★ 锯齿爪刀"
 	}
+	"weapon_knife_css"
+	{
+		"chi"	"★ 经典匕首"
+	}
 	"weapon_knife_t"
 	{
 		"chi"	"恐怖分子默认刀"
@@ -335,5 +339,65 @@
 	"NameTagSuccess"
 	{
 		"chi"	"名称标签已设置"
+	}
+	"SeedTitle"
+	{
+		"chi"	"图案模板： %i"
+	}
+	"SeedTitleNoSeed"
+	{
+		"chi"	"图案模板： ∞"
+	}
+	"SeedRandom"
+	{
+		"chi"	"使用随机图案模板编号"
+	}
+	"SeedManual"
+	{
+		"chi"	"手动设置图案模板编号"
+	}
+	"SeedSave"
+	{
+		"chi"	"保存当前图案模板编号"
+	}
+	"SeedInstruction"
+	{
+		"chi"	"请将你希望设置的图案模板编号输入至聊天框。如需取消，请输入 !cancel 。"
+	}
+	"SeedSuccess"
+	{
+		"chi"	"图案模板应用成功！"
+	}
+	"SeedCancelled"
+	{
+		"chi"	"图案模板设置中断。"
+	}
+	"SeedFailed"
+	{
+		"chi"	"图案模板编号无效 (0 - 8192)"
+	}
+	"SeedSaved"
+	{
+		"chi"	"图案模板编号已保存。"
+	}
+        "Seed"
+        {
+                "chi"   "图案模板编号"
+	}
+	"SeedDisabled"
+	{
+		"chi"	"图案模板选项已禁用"
+	}
+	"SeedExplanation"
+	{
+		"chi"	"你需要使用!ws菜单来为皮肤设置图案模板"
+	}
+	"SeedReset"
+	{
+		"chi"	"图案模板已重置。"
+	}
+	"ResetSeed"
+	{
+		"chi"	"重置图案模板"
 	}
 }
