Updated the English translations for the CS20 update

--- a/addons/sourcemod/translations/weapons.phrases.txt
+++ b/addons/sourcemod/translations/weapons.phrases.txt
@@ -298,7 +298,7 @@
 	}
 	"weapon_knife_css"
 	{
-		"en"	"★ Classic Knife"
+		"chi"	"★ Classic Knife"
 	}
 	"weapon_knife_t"
 	{
@@ -340,9 +340,13 @@
 	{
 		"en"	"Name tag successfully applied"
 	}
-	"Seed"
+	"AllSkins"
 	{
-		"en"	"Seed"
+		"en"	"Skin From All"
+	}
+	"AllSkinsSub"
+	{
+		"en"	"Skins for: %s"
 	}
 	"SeedTitle"
 	{
@@ -354,7 +358,7 @@
 	}
 	"SeedRandom"
 	{
-		"en"	"Random Seed"
+		"en"	"Use Random Seed"
 	}
 	"SeedManual"
 	{
@@ -370,7 +374,7 @@
 	}
 	"SeedSuccess"
 	{
-		"en"	"Seed successfully applied."
+		"en"	"Seed successfully applied"
 	}
 	"SeedCancelled"
 	{
@@ -383,21 +387,5 @@
 	"SeedSaved"
 	{
 		"en"	"Seed saved."
-	}
-	"SeedDisabled"
-	{
-		"en"	"Seed menu is disabled at the moment."
-	}
-	"SeedExplanation"
-	{
-		"en"	"You should use !ws menu to set seed for skins."
-	}
-	"SeedReset"
-	{
-		"en"	"Seed reset."
-	}
-	"ResetSeed"
-	{
-		"en"	"Reset Seed"
 	}
 }
