--- a/addons/sourcemod/translations/weapons.phrases.txt
+++ b/addons/sourcemod/translations/weapons.phrases.txt
@@ -1,4 +1,4 @@
-"Phrases"
+﻿"Phrases"
 {
 	"WSMenuTitle"
 	{
@@ -295,6 +295,22 @@
 	"weapon_knife_widowmaker"
 	{
 		"en"	"★ Talon"
+	}
+	"weapon_knife_skeleton"
+	{
+		"en"	"★ Skeleton Knife"
+	}
+	"weapon_knife_outdoor"
+	{
+		"en"	"★ Nomad Knife"
+	}
+	"weapon_knife_canis"
+	{
+		"en"	"★ Survival Knife"
+	}
+	"weapon_knife_cord"
+	{
+		"en"	"★ Paracord Knife"
 	}
 	"weapon_knife_css"
 	{
