Update Translations Portuguese-BR

--- a/addons/sourcemod/translations/pt/weapons.phrases.txt
+++ b/addons/sourcemod/translations/pt/weapons.phrases.txt
@@ -6,39 +6,39 @@
 	}
 	"ChooseKnife"
 	{
-		"pt"	"★ Mudar Suas Facas ★"
+		"pt"	"★ Mudar sua Faca ★"
 	}
 	"ConfigAllWeapons"
 	{
-		"pt"	"Configurar Todas As Armas"
+		"pt"	"Configurar Todas as Armas"
 	}
 	"KnifeMenuTitle"
 	{
-		"pt"	"★ Seleção De Facas ★"
+		"pt"	"★ Seleção de Faca ★"
 	}
 	"AllWeaponsMenuTitle"
 	{
-		"pt"	"Todas As Armas"
+		"pt"	"Todas as Armas"
 	}
 	"Increase"
 	{
-		"pt"	"Aumentar %d%%"
+		"pt"	"Aumentar em %d%%"
 	}
 	"Decrease"
 	{
-		"pt"	"Diminuir %d%%"
+		"pt"	"Diminuir em %d%%"
 	}
 	"NameTagInfo"
 	{
-		"pt"	"Use !nametag <tag> para escolher uma name tag para sua arma atual!"
+		"pt"	"Use !nametag <tag> para escolher uma nametag para sua arma atual!"
 	}
 	"NameTagColor"
 	{
-		"pt"	"Escolher cor da name tag"
+		"pt"	"Escolher cor da nametag"
 	}
 	"NameTagDisabled"
 	{
-		"pt"	"O uso da name tag está desabilitado no momento."
+		"pt"	"O uso da nametag está desabilitado no momento."
 	}
 	"DontSpamNameTag"
 	{
@@ -50,7 +50,7 @@
 	}
 	"ChooseLanguage"
 	{
-		"pt"	"Escolha uma linguagem para as suas skins:"
+		"pt"	"Selecione o idioma para nomes de skin:"
 	}
 	"ChooseColor"
 	{
@@ -90,7 +90,7 @@
 	}
 	"DeleteNameTag"
 	{
-		"pt"	"Apagar Name Tag"
+		"pt"	"Apagar NameTag"
 	}
 	"OwnKnife"
 	{
@@ -98,11 +98,11 @@
 	}
 	"SetSkin"
 	{
-		"pt"	"Escolha uma skin"
+		"pt"	"Escolha uma Skin"
 	}
 	"SetFloat"
 	{
-		"pt"	"Condição da arma: "
+		"pt"	"Condição da Arma: "
 	}
 	"StatTrak"
 	{
@@ -110,7 +110,7 @@
 	}
 	"SetNameTag"
 	{
-		"pt"	"Name Tag: "
+		"pt"	"NameTag"
 	}
 	"On"
 	{
@@ -142,7 +142,7 @@
 	}
 	"weapon_revolver"
 	{
-		"pt"	"Revólver R8"
+		"pt"	"R8 Revolver"
 	}
 	"weapon_deagle"
 	{
@@ -158,7 +158,7 @@
 	}
 	"weapon_sawedoff"
 	{
-		"pt"	"Cano curto"
+		"pt"	"Sawed-Off"
 	}
 	"weapon_negev"
 	{
@@ -198,7 +198,7 @@
 	}
 	"weapon_elite"
 	{
-		"pt"	"Berettas Duplas"
+		"pt"	"Dual Berettas"
 	}
 	"weapon_m249"
 	{
@@ -252,21 +252,25 @@
 	{
 		"pt"	"Glock-18"
 	}
+	"weapon_mp5sd"
+	{
+		"pt"	"MP5-SD"
+	}
 	"weapon_bayonet"
 	{
-		"pt"	"★ Baioneta"
+		"pt"	"★ Bayonet"
 	}
 	"weapon_knife_gut"
 	{
-		"pt"	"★ Gut Hook"
+		"pt"	"★ Gut Knife"
 	}
 	"weapon_knife_flip"
 	{
-		"pt"	"★ Canivete"
+		"pt"	"★ Flip Knife"
 	}
 	"weapon_knife_m9_bayonet"
 	{
-		"pt"	"★ Baioneta M9"
+		"pt"	"★ M9 Bayonet"
 	}
 	"weapon_knife_karambit"
 	{
@@ -274,23 +278,59 @@
 	}
 	"weapon_knife_tactical"
 	{
-		"pt"	"★ Faca de caçador"
+		"pt"	"★ Huntsman Knife"
 	}
 	"weapon_knife_butterfly"
 	{
-		"pt"	"★ Canivete borboleta"
+		"pt"	"★ Butterfly Knife"
 	}
 	"weapon_knife_falchion"
 	{
-		"pt"	"★ Canivete Falchion"
+		"pt"	"★ Falchion Knife"
 	}
 	"weapon_knife_push"
 	{
-		"pt"	"★ Adagas Sombrias"
+		"pt"	"★ Shadow Daggers"
 	}
 	"weapon_knife_survival_bowie"
 	{
-		"pt"	"★ Faca Bowie"
+		"pt"	"★ Bowie Knife"
+	}
+	"weapon_knife_ursus"
+	{
+		"pt"	"★ Ursus"
+	}
+	"weapon_knife_gypsy_jackknife"
+	{
+		"pt"	"★ Navaja"
+	}
+	"weapon_knife_stiletto"
+	{
+		"pt"	"★ Stiletto"
+	}
+	"weapon_knife_widowmaker"
+	{
+		"pt"	"★ Talon"
+	}
+	"weapon_knife_css"
+	{
+		"pt"	"★ Classic Knife"
+	}
+	"weapon_knife_cord"
+	{
+		"pt"	"★ Paracord Knife"
+	}
+	"weapon_knife_canis"
+	{
+		"pt"	"★ Survival Knife"
+	}
+	"weapon_knife_outdoor"
+	{
+		"pt"	"★ Nomad Knife"
+	}
+	"weapon_knife_skeleton"
+	{
+		"pt"	"★ Skeleton Knife"
 	}
 	"weapon_knife_t"
 	{
@@ -299,5 +339,97 @@
 	"weapon_knife"
 	{
 		"pt"	"Knife"
+	}
+	"ChangeNameTag"
+	{
+		"pt"	"Set Name Tag"
+	}
+	"NameTagNew"
+	{
+		"pt"	"You can now use !ws menu to set name tag."
+	}
+	"GracePeriod"
+	{
+		"pt"	"You can only use !ws command if you're dead or in the first %d seconds after every round start."
+	}
+	"ChangeLang"
+	{
+		"pt"	"Change Language"
+	}
+	"NameTagCancelled"
+	{
+		"pt"	"Nametag operation aborted."
+	}
+	"Yellow"
+	{
+		"pt"	"Amarelo"
+	}
+	"NameTagInstruction"
+	{
+		"pt"	"Write your desired name tag into chat. To abort, type !cancel."
+	}
+	"NameTagSuccess"
+	{
+		"pt"	"Name tag successfully applied"
+	}
+	"Seed"
+	{
+		"pt"	"Seed"
+	}
+	"SeedTitle"
+	{
+		"pt"	"Seed: %i"
+	}
+	"SeedTitleNoSeed"
+	{
+		"pt"	"Seed: ∞"
+	}
+	"SeedRandom"
+	{
+		"pt"	"Seed Aleatório"
+	}
+	"SeedManual"
+	{
+		"pt"	"Seed Manual"
+	}
+	"SeedSave"
+	{
+		"pt"	"Salvar Seed Atual"
+	}
+	"SeedInstruction"
+	{
+		"pt"	"Write your desired seed into chat. To abort, type !cancel."
+	}
+	"SeedSuccess"
+	{
+		"pt"	"Seed aplicada com sucesso."
+	}
+	"SeedCancelled"
+	{
+		"pt"	"Operação de seed abortada."
+	}
+	"SeedFailed"
+	{
+		"pt"	"Seed inválida (0 - 8192)"
+	}
+	"SeedSaved"
+	{
+		"pt"	"Seed salva."
+	}
+	"SeedDisabled"
+	{
+		"pt"	"O menu de seed está desativado no momento."
+	}
+	"SeedExplanation"
+	{
+		"pt"	"Você deve usar o menu  !ws para definir a seed para skins."
+	}
+	"SeedReset"
+	{
+		"pt"	"Seed reseted."
+	}
+	"ResetSeed"
+	{
+		"pt"	"Resetar Seed"
 	}
 }
