Add ghost and golden knives for LoB

--- a/addons/sourcemod/translations/weapons.phrases.txt
+++ b/addons/sourcemod/translations/weapons.phrases.txt
@@ -344,6 +344,14 @@
 	{
 		"en"	"Knife"
 	}
+	"weapon_knifegg"
+	{
+		"en"	"★ Golden Knife"
+	}
+	"weapon_knife_ghost"
+	{
+		"en"	"★ Spectral Shiv"
+	}
 	"ChangeNameTag"
 	{
 		"en"	"Set Name Tag"
