--- a/addons/sourcemod/translations/pt/weapons.phrases.txt
+++ b/addons/sourcemod/translations/pt/weapons.phrases.txt
@@ -96,13 +96,17 @@
 	{
 		"pt"	"★ Sua própia faca"
 	}
+	"RandomKnife"
+	{
+		"en"	"★ Faca Aleatória"
+	}
 	"SetSkin"
 	{
 		"pt"	"Escolha uma Skin"
 	}
 	"SetFloat"
 	{
-		"pt"	"Condição da Arma: "
+		"pt"	"Desgaste da Arma: "
 	}
 	"StatTrak"
 	{
