--- a/addons/sourcemod/translations/weapons.phrases.txt
+++ b/addons/sourcemod/translations/weapons.phrases.txt
@@ -68,6 +68,18 @@
 	{
 		"en"	"Use: !nametag <tag>"
 	}
+	"SearchApplyAll"
+	{
+		"en"	"Apply to all"
+	}
+	"SearchApplyCurrent"
+	{
+		"en"	"Apply to current"
+	}
+	"SearchApplyCurrentFailed"
+	{
+		"en"	"Your weapon doesn't have this skin."
+	}
 	"ChooseLanguage"
 	{
 		"en"	"Select language for skin names:"
