update: Translations Purtuguês-BR

--- a/addons/sourcemod/translations/pt/weapons.phrases.txt
+++ b/addons/sourcemod/translations/pt/weapons.phrases.txt
@@ -48,6 +48,22 @@
 	{
 		"pt"	"Use: !nametag <tag>"
 	}
+	"SearchDisabled"
+	{
+		"pt"	"A pesquisa de skins está desativada no momento."
+	}
+	"SearchApplyAll"
+	{
+		"pt"	"Aplicar a todos skins"
+	}
+	"SearchApplyCurrent"
+	{
+		"pt"	"Aplicar na skin atual"
+	}
+	"SearchApplyCurrentFailed"
+	{
+		"pt"	"Sua arma não tem essa skin."
+	}
 	"ChooseLanguage"
 	{
 		"pt"	"Selecione o idioma para nomes de skin:"
